# PumpkinPatch

./: .gitignore  Cargo.toml  README.md  diesel.toml
frontend/: bun.lockb  package.json  tailwind.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  config.ts
frontend/src/lib/stores/: auth.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/auth/callback/: +page.ts
frontend/src/routes/dashboard/: +page.svelte  +page.ts
frontend/src/routes/discover/: +page.svelte
migrations/2024-12-04-172046_create_users/: down.sql  up.sql
migrations/2024-12-04-172050_create_plugins/: down.sql  up.sql
migrations/2024-12-04-172100_create_plugin_versions/: down.sql  up.sql
migrations/2024-12-04-172111_create_comments/: down.sql  up.sql
migrations/2024-12-04-172114_create_ratings/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
