[package]
name = "pumpkinpatch"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
minio = { git = "https://github.com/minio/minio-rs.git" }
oauth2 = "4.4.2"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
openid = "0.15.0"
uuid = { version = "1.11.0", features = [ "v4", "fast-rng" ] }
actix-session = { version = "0.10.1", features = [ "cookie-session" ] }
actix-cors = "0.7.0"